# XianCraft

./: .firebaserc  AGENTS.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  cloudbuild-docker.Dockerfile  cloudbuild.yaml  firebase.json  xiancraft.service
.github/workflows/: deploy.yml  firebase-hosting-deploy.yml
.idx/: dev.nix
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
data/: items.json  monster_registry.json  monsters.json  npcs.json  quest_registry.json  realms_data.json  skills.json  world_config.json
data/maps/: changan.json  fanchen_village.json  start_zone.json  town.json  wild_zones.json  wudang.json
data/skills/: unarmed.json
server/: Cargo.toml
server/src/: main.rs
server/src/world/: character.rs  combat.rs  entity.rs  mod.rs  npc.rs  player.rs  player_state.rs  room.rs
src/: combat.rs  command.rs  game_loop.rs  gotify.rs  lib.rs  main.rs  npc.rs  ui.rs  world_model.rs
src/commands/: battle.rs  help.rs  interaction.rs  look.rs  mod.rs  movement.rs  player.rs  quest.rs  who.rs
src/tests/: attack_quest_test.rs  combat_flow_tests.rs  combat_tests.rs  full_quest_workflow_test.rs  game_demo.rs  help_command_test.rs  mod.rs  move_look_tests.rs  quest_interaction_tests.rs  quest_reward_tests.rs  realm_tests.rs  visual_refinement_demo.rs  welcome_demo.rs  welcome_demo_anime.rs  who_command_test.rs  wild_zone_tests.rs
src/world/: combat.rs  data_loader.rs  entity.rs  event.rs  item.rs  item_registry.rs  loader.rs  map_config.rs  mod.rs  npc.rs  player.rs  room.rs  skill.rs  text.rs  world.rs  world_config.rs  world_event.rs  world_loader.rs  world_player.rs  world_skill.rs  world_state.rs  world_text.rs  world_zone.rs  zone.rs
