[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["ws"] }
chrono = "0.4"
colored = "2.1.0"
futures-util = { version = "0.3.30", features = ["sink"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"], optional = true }
ureq = { version = "2.9", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = []
gotify = ["reqwest", "ureq"]

[dev-dependencies]
strip-ansi-escapes = "0.2.0"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.0"
