[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.8", features = ["ws"] } # Enable WebSocket support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
futures-util = { version = "0.3.31", features = ["sink"] } # Enable Sink support
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
